# axum-sass-template

./: .gitignore  Cargo.toml  README.md
configuration/: base.example.yaml  local.example.yaml
migrations/: 20240719000351_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  constants.rs  emailer.rs  lib.rs  main.rs  startup.rs  template_helpers.rs  user.rs  utils.rs
src/domain/: user_password.rs
src/handlers/: homepage.rs
src/routes/: auth.rs  health_check.rs  homepage.rs  mod.rs  protected.rs
templates/: login.html  register.html
tests/routes/: helpers.rs  main.rs
